Removed most of the critical issues. We left one of the issues in because we couldn't find a way to make it work without it.
Former-commit-id: c5879578a64a4a12a3e0a8c4af25d1d7ed259480 [formerly 6ce1ad5b3c0c4b75b7a67bb01d72afaf111c27b8]
Former-commit-id: 9bd270817c52f39a2f9765116c77e2a15049e898